debian-installer (20031114) UNRELEASED; urgency=low

  * Goswin von Brederlow
    - Moved fetching of (u)debs into get-packages shell script
  * Joey Hess
    - Switch i386 to using dhcp-client rather than pump for netboot.
      Left it using pump on other arches that did not already use dhcp-client,
      at least for now.
    - Switch i386, hppa, and ia64 to dhcp-client rather than udhcp
      on the root floppy.
    - Switch powerpc to pump on the root floppy.
    - Switch i386 to dhcp-client rather than udhcp on the access floppy.
    - Switch from pump to dhcp-client on powerpc.
    - Add disk labels to the i386 floppy images, for use by the bootfloppy
      initrd, and maybe later by the floppy retreiver, etc.
  * Thiemo Seufer
    - Fix error handling in tftpboot.sh
  * Chris Tillman
    - Add DEBCONF_PRIORITY note to powerpc boot message.
    - Add MacRISC3 & 4 to ofboot.b for compatibility with G4/G5 powerpcs

 -- Joey Hess <joeyh@debian.org>  Thu, 13 Nov 2003 14:39:21 -0500

debian-installer (20031113) unstable; urgency=low

  * Joey Hess
    - Add new loop-modules to bootfloppy, hd-media.
    - Move input-modules from root floppy to bootfloppy, as the new
      rootskel-bootfloppy prompts for the user to hit enter.
    - Remove redundant usb-discover and usb-modules from root floppy;
      the boot floppy takes care of that.
    - Remove fat-modules and floppy-modules from the root floppy; they
      boot floppy loads them.
    - Create DEST before copying in DEST_KERNEL.
    - ia64 build-depends on dosfstools. Closes: #219919
    - sparc build-depends on genromfs. Closes: #220208
    - remove brltty from everything except access. It is causing problems
      (#219928) on sparc at least.
    - add nic-extra-modules to netboot for i386, as it fits and netboot
      should support as much as it can
    - try to get full UTF-8 going on netboot
    - add nano to netboot
  * Richard Hirst
    - Add mtools as a build-dep for ia64
