@@ -1,7 +1,10 @@
 debian-installer (20031114) UNRELEASED; urgency=low
 
   * Goswin von Brederlow
-    - Moved fetching of (u)debs into get-packages shell script
+    - Moved fetching of (u)debs into get-packages shell script.
+    - Changed sources.list to sources.list.udeb, added sources.list.deb.
+    - Allowed "deb file:/..." urls in /etc/apt/sources.list,
+      simplified sed expression and change file to copy urls.
   * Joey Hess
     - Switch i386 to using dhcp-client rather than pump for netboot.
       Left it using pump on other arches that did not already use dhcp-client,
